# ai-kindlemint-engine

./: .ccfignore  .coderabbit.yaml  .coderabbit.yml  .cursorignore  .deepsource.toml  .env.MASTER  .env.example  .env.production-ready  .env.promotion-pipeline  .env.v3-production  .gitattributes  .gitignore  .pre-commit-config.yaml  .roomodes  .worktree  .worktree_config.json  .worktree_orchestration_config.json  A2A_REMOVAL_COMPLETE.md  ACTUAL_REDDIT_POSTER.py  AGENT.md  AI_KindleMint_GAP_Analysis.md  ARCHITECTURE_MIGRATION_STATUS.md  AUTOMATED_PUBLISHING_GUIDE.md  AUTOMATED_REVENUE_REPORT.md  AUTONOMOUS_CAPABILITIES.md  AUTONOMOUS_ORCHESTRATOR.py  AUTO_TRAFFIC_NOW.py  AWS_MIGRATION_CHECKLIST.md  AWS_MIGRATION_COMPLETE.md  CEO_DASHBOARD.md  CEO_DASHBOARD.py  CEO_MONEY_PRINTER.py  CEO_MONEY_STATUS_FINAL.md  CEO_TRAFFIC_UPDATE.md  CI_ORCHESTRATION_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_ORCHESTRATOR.md  CLAUDE_TEST.md  CODE_HYGIENE_GUIDE.md  COMPETITOR_ANALYSIS.md  (+259 more)
.claude/: config.json  settings.json  settings.local.json  worktree-config.json
.github/: CODEOWNERS  agent-workflow.yml  bot-config.yml  bot-pr-config.yml  bots.toml  ci-reduction-plan.yml  cto-override-config.yml  dependabot.yml  pr-automation-rules.yml  pr-config.json  pull_request_template.md
.vercel/: project.json
active_production/: README.md
affiliate_resources/: email_swipes.txt
agents/: ci_orchestration_function.py  claude_code_orchestrator.py  cmo_agent.py  code_hygiene_orchestrator.py  content-generator_agent.py  content-generator_agent_docs.md  cto_agent.py  marketing-specialist_agent.py  (+5 more)
(+3349 files in other folders)
